# truthhire

./: Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
