[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthhire"
version = "1.0.0"
description = "AI environment that detects bias in job descriptions and AI-generated content"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openenv-core",
    "openai",
    "python-dotenv",
    "requests",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/merlin018/Truthhire"

[tool.hatch.build.targets.wheel]
packages = ["."]
[project.scripts]
server = "server.app:main"